# pi-deck-pico

./: .gitignore  .gitmodules  README.md  c_cpp_properties.json
.cargo/: config
_software_circuitpython/lib/adafruit_hid/: ._keyboard.mpy
_software_cpp/src/: Config.h
archive/: README.md
archive/_software_arduino/src/: i2c_scan.cpp  test.cpp  ug8.cpp
archive/_software_circuitpython/: code.py
archive/_software_cpp/include/Display/: display.cpp  display.hpp
archive/_software_cpp/lib/FreeRTOS-Kernel/: CMakeLists.txt
archive/_software_micropython/src/: main.py
debug/: README.md
design/: _bottom-deck.stl  _display-holder.fdg  top-deck.stl
design/v1/: bottom-deck.stl  display-holder.stl  pi-deck-mini-1.fdg
micropython/: .mpyproject.json  main.py
software/: platformio.ini
software/src/: display.cpp  main.cpp
software_arduino/: platformio.ini
software_arduino/src/: main.cpp
software_circuitpython/: code.py  conf.json
software_cpp/: CMakeLists.txt  README.md  platformio.ini
software_cpp/include/Keypad/: keypad.cpp  keypad.hpp
software_cpp/include/assets/: custom-logo.h
software_cpp/lib/: FreeRTOSConfig.h
software_cpp/src/: main.cpp
software_micropython/: main.py  pico-go.json
software_rust/: Cargo.toml
software_rust/.cargo/: config.toml
software_rust/src/: button.rs  constants.rs  debouncer.rs  display.rs  hid_util.rs  key_config.rs  macros.rs  main.rs  old.main.rs  usb.rs
