[package]
name = "software_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.3.0"
embedded-time = "0.12.0"
embedded-hal ="0.2.5"
ssd1306 = "0.7.0"

# [dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"

# [features]
# default = ["boot2", "rt"]
# boot2 = ["rp2040-boot2"]
# rt = ["cortex-m-rt","rp2040-hal/rt"]

[[bin]]
name = "software_rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations