[package]
name = "software_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.5.0"
# rp2040-boot2 = {version="0.2.0", optional = true }
embedded-time = "0.12.0"
embedded-hal = {version = "0.2.5", features=["unproven"]}
ssd1306 = "0.7.0"

cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"

usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.6.0"

defmt-rtt = "0.3.1"
defmt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

nb = "1.0.0"
heapless = "0.7.15"

fugit = "0.3.6"
# [dev-dependencies]
# flip-link = "0.1.5"

# [features]
# default = ["boot2", "rt"]
# boot2 = ["rp2040-boot2"]
# rt = ["cortex-m-rt","rp2040-hal/rt"]

[[bin]]
name = "software_rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
